# torrent-pydantic

./: .gitattributes  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: references.md
src/torrent_models/: __init__.py  const.py  create.py  info.py  torrent.py
src/torrent_models/cli/: __init__.py
src/torrent_models/hashing/: base.py  hybrid.py  v1.py  v2.py
src/torrent_models/types/: __init__.py  common.py  v2.py
stubs/: libtorrent.pyi
tests/: bench.py  test_v2.py
tests/data/: lt_basic_hybrid.torrent  lt_basic_v1.torrent  lt_basic_v2.torrent  qbt_basic_hybrid.torrent  qbt_basic_v1.torrent  qbt_basic_v2.torrent
